[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-config-manager"
version = "1.0.0"
description = "A TUI tool to manage SSH config with vim-like keybindings"
authors = [{name = "Hemanth"}]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.100.0",
    "cryptography>=41.0.0",
]

[project.scripts]
sshconfig = "sshconfig:main"
